--- a/templates/index.html
+++ b/templates/index.html
@@ -208,15 +208,15 @@
                                     </div>
                                     <hr/>
                                     <div class="row form-group loop_date">
-                                        <label class="col-4 col-form-label">Play for</label>
+                                        <label class="col-4 col-form-label">Jouer pour:</label>
                                         <div class="controls col-7">
                                             <select class="form-control" id="loop_times">
-                                                <option value="day">1 Day</option>
-                                                <option value="week">1 Week</option>
-                                                <option value="month">1 Month</option>
-                                                <option value="year">1 Year</option>
-                                                <option value="forever">Forever</option>
-                                                <option value="manual" selected="selected">Manual</option>
+                                                <option value="day">1 Jour</option>
+                                                <option value="week">1 Semaine</option>
+                                                <option value="month">1 Mois</option>
+                                                <option value="year">1 Année</option>
+                                                <option value="forever">Toujours</option>
+                                                <option value="manual" selected="selected">Manuel</option>
                                             </select>
                                         </div>
                                     </div>
@@ -327,6 +327,7 @@
     <div class="container">
         <a class="brand" href="/">
             <img alt="Brand" src="static/img/screenly_ose_logo.png" style="width: 940px; height: 80px;">
+			<br/>
         </a>
         <ul class="nav float-right">
            
