--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
                 <i class="fas fa-pencil-alt"></i>
             </button>
             <button class="delete-asset-button btn btn-outline-secondary" data-html="true" data-placement="left"
-                    data-title="Are you sure?" data-trigger="manual" type="button">
+                    data-title="ètes vous sur ?" data-trigger="manual" type="button">
                 <i class="far fa-trash-alt"></i>
             </button>
         </td>
@@ -108,7 +108,7 @@
     <script id="confirm-delete-template" type="text/template">
         <div class="popover-delete-content">
             <div class="float-left">
-                <a class="confirm-delete btn btn-danger" href="#">Delete</a>
+                <a class="confirm-delete btn btn-danger" href="#">Supprimer</a>
             </div>
             <div class="float-right">
                 <a class="cancel-delete btn btn-outline-secondary" href="#">Annuler</a>
@@ -117,7 +117,7 @@
     </script>
 
     <script id="processing-message-template" type="text/template">
-        <label class="processing-message">Asset in processing</label>
+        <label class="processing-message">Scène en progression</label>
     </script>
 
     <script id="request-error-template" type="text/template">
@@ -177,7 +177,7 @@
                                     <label class="col-4 col-form-label">Scène URL</label>
                                     <div class="col-7 controls">
                                         <input class="form-control" name="uri"
-                                               placeholder="Public URL to this asset's location" type="text"/>
+                                               placeholder="Adresse URL de la scène" type="text"/>
                                     </div>
                                 </div>
                                 <div class="asset-location edit" style="display:none">
@@ -282,8 +282,8 @@
                             <div class="float-left progress active" style="display:none">
                                 <div class="bar progress-bar-striped progress-bar progress-bar-animated"></div>
                             </div>
-                            <input class="btn btn-outline-secondary cancel" type="button" value="Cancel"/>
-                            <input id="save-asset" class="btn btn-primary" type="submit" value="Save"/>
+                            <input class="btn btn-outline-secondary cancel" type="button" value="Annuler"/>
+                            <input id="save-asset" class="btn btn-primary" type="submit" value="Sauver"/>
                         </div>
                     </div>
                 </div>
