--- a/templates/index.html
+++ b/templates/index.html
@@ -326,7 +326,7 @@
 <div class="navbar navbar-expand-lg fixed-top bg-primary">
     <div class="container">
         <a class="brand" href="/">
-            <img alt="Brand" src="static/img/screenly_ose_logo.png" style="width: 1200px; height: 122px;">
+            <img src="static/img/screenly_ose_logo.png"/>
 		
         </a>
         <ul class="nav float-right">
