--- a/templates/index.html
+++ b/templates/index.html
@@ -326,7 +326,7 @@
 <div class="navbar navbar-expand-lg fixed-top bg-primary">
     <div class="container">
         <a class="brand" href="/">
-            <img src="static/img/screenly_ose_logo.png"/>
+            <img src="static/img/screenly_ose_logo.png" style="width: 800px; height: 75px;">
 		
         </a>
         <ul class="nav float-right">
