--- a/templates/index.html
+++ b/templates/index.html
@@ -326,7 +326,7 @@
 <div class="navbar navbar-expand-lg fixed-top bg-primary">
     <div class="container">
         <a class="brand" href="/">
-            <img src="static/img/screenly_ose_logo.png" style="width: 1213px; height: 93px; text-align:center">
+            <img src="static/img/screenly_ose_logo.png" style="width: 1213px; height: 93px; margin-left: auto; margin-right: auto ">
 		
         </a>
         <ul class="nav float-right">
