--- a/static/css/screenly.css
+++ b/static/css/screenly.css
@@ -93,7 +93,8 @@ section .header {
   z-index: 10000; }
   #request-error .alert {
     position: fixed;
-    margin-left: 240px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 2px;
     width: 400px; }
 
