--- a/templates/index.html
+++ b/templates/index.html
@@ -329,7 +329,7 @@
             <img src="static/img/screenly_ose_logo.png" style="width: 1213px; height: 93px ">
 		
         </a>
-        <ul class="nav float-right">
+        <ul class="nav float-left">
            
             <li>
                
