--- a/templates/index.html
+++ b/templates/index.html
@@ -323,7 +323,7 @@
 
 <body>
 <div id="request-error" class="navbar fixed-top"></div>
-<div class="navbar navbar-expand-lg fixed-top bg-primary">
+<div class="header bg-primary">
     <div class="container">
         <a class="brand" href="/">
             <img src="static/img/screenly_ose_logo.png" style="width: 1213px; height: 93px ">
