--- a/templates/index.html
+++ b/templates/index.html
@@ -326,10 +326,10 @@
 <div class="navbar navbar-expand-lg fixed-top bg-primary">
     <div class="container">
        
-            <img src="static/img/screenly_ose_logo.png" style="width: 1000px; height: 93px ">
+            <img src="static/img/screenly_ose_logo.png" style="width: 1213px; height: 93px ">
 		
         </a>
-        <ul class="nav float-left">
+        <ul class="nav float-none">
            
             <li>
                
