--- a/static/sass/screenly.scss
+++ b/static/sass/screenly.scss
@@ -39,20 +39,18 @@ label {
 }
 
 .splash {
-    margin-top: 0;
-    font-size: calc((1.5vw + 1.5vh) / 2);
+    margin-top: 0px;
 
     // Temporary fix splash page for uzbl.
     .row {
         display: block;
     }
     .logo-container {
-      height: 30vh;
+      padding: 20px 0px 40px 0px;
       border-bottom: 1px solid #eee;
-      padding: 3vh 0;
-      margin-bottom: 3vh;
+      margin: 20px 0 30px;
       img {
-        height: 100%;
+        max-width: 450px;
       }
     }
     @media (max-width: 767px) {
@@ -191,7 +189,9 @@ section {
   z-index: 10000;
 
   .alert {
+    position: fixed;
     margin-left: 300px;
+    margin-top: 23px;
     width: 500px;
   }
 }
@@ -241,7 +241,7 @@ input[name="file_upload"] {
     left: 0;
 }
 
-.end_date, .start_date, .loop_date {
+.end_date, .start_date { 
   input {
     float: left;
     width: 47%;
